--- a/nodedocker/Dockerfile
+++ b/nodedocker/Dockerfile
@@ -2,7 +2,7 @@ FROM node:12.18.1
 
 WORKDIR /app-back-nodeJs
 
-COPY ["package.json", "package-lock.json*", "/public" , "/src", "./" ]
+COPY ["/nodedocker/package.json", "/nodedocker/package-lock.json*", "/nodedocker/public" , "/nodedocker/src", "./" ]
 
 RUN npm install
 
